@@ -21,6 +21,7 @@ package org.languagetool.rules.de;
 import junit.framework.TestCase;
 import org.languagetool.JLanguageTool;
 import org.languagetool.language.German;
+import org.languagetool.rules.Rule;
 
 import java.io.IOException;
 
@@ -28,6 +29,10 @@ public class UppercaseSentenceStartRuleTest extends TestCase {
 
   public void testRule() throws IOException {
     final JLanguageTool lt = new JLanguageTool(new German());
+    for (Rule rule : lt.getAllActiveRules()) {
+      lt.disableRule(rule.getId());
+    }
+    lt.enableRule("UPPERCASE_SENTENCE_START");
     
     assertEquals(2, lt.check("etwas beginnen. und der auch nicht").size());
     
