@@ -22,6 +22,8 @@ LanguageTool Change Log
 -German:
     -Fixed a rare NullPointerException and an ArrayIndexOutOfBoundsException
     -Fixed several false alarms
+    -New rule that checks for sentences without a verb (turned off by default due to
+     the risk of false alarms)
     
 -Portuguese:
     -added/improved several rules
